# rag-test-project

./: .gitignore  README.md  ask_rag.py  ask_rag_anything.py  benchmark_rag.py  create_qa.py  docker-compose.yml  embedding.py  input_arguments.py  pyproject.toml  set_hf_token.py  test_table_extraction.py
.cursor/rules/: use-python.mdc
evaluation/: metric.py
pdf_text_extractor/: document_chunker.py  pdf_reader.py
