[project]
name = "llm-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-ollama",
    "langchain-chroma",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "pypdf",
    "pdfplumber",
    "pymupdf",
    "pillow",
    "requests",
    "aiohttp",
    "chromadb",
    "transformers",
    "raganything[all]",
    "mineru[core]",
    "jupyterlab",
]
